Исправлены запуски тестов + рефакторинг